Update 't9c3wvt5d-python' component image to: quay.io/rhtap_qe/rhtap-qe-python:be216f72aa7a8a136356088f0e86a3b06f253684@sha256:55b7efc7b123cc4b4aa24079a4d5879e4b81590ef6e24a9e11a5efe5218955bd

--- a/components/t9c3wvt5d-python/overlays/development/deployment-patch.yaml
+++ b/components/t9c3wvt5d-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: t9c3wvt5d-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-python:be216f72aa7a8a136356088f0e86a3b06f253684@sha256:55b7efc7b123cc4b4aa24079a4d5879e4b81590ef6e24a9e11a5efe5218955bd
+          name: container-image
